# raycasting_research

AmAzing/: .gitignore
AmAzing/console_ver/: main.cc  proto_main.cc
AmAzing/console_ver/include/: App.hh  KeyHandler.hh  Matrix.hh  State.hh
AmAzing/console_ver/src/: App.cc  InputKey.cc  KeyHandler.cc  Layout.cc  State.cc
AmAzing/console_ver/stash/src/: App.cc  KeyHandler.cc  Layout.cc
AmAzing/console_ver/utils/: safeCExec.hh
AmAzing/include/: KeyHandler.hh
Birnberg_Orrico_AmAzing/AmAzing/: main.cc
Birnberg_Orrico_AmAzing/AmAzing/annotated_original/: main.cc
Birnberg_Orrico_AmAzing/AmAzing/annotated_original/include/: App.hh  KeyHandler.hh  Layout.hh  State.hh
Birnberg_Orrico_AmAzing/AmAzing/annotated_original/src/: App.cc  KeyHandler.cc  Layout.cc  State.cc
Birnberg_Orrico_AmAzing/AmAzing/console_ver/: Matrix_test.cc  maze-proto  proto_main.cc
Birnberg_Orrico_AmAzing/AmAzing/console_ver/include/: App.hh  FpsCalc.hh  InputKey.hh  KeyHandler.hh  Layout.hh  Matrix.hh  State.hh  _Matrix.hh  __Matrix.hh  ___Matrix.hh
Birnberg_Orrico_AmAzing/AmAzing/console_ver/src/: App.cc  KeyHandler.cc  Layout.cc  State.cc
Birnberg_Orrico_AmAzing/AmAzing/console_ver/stash/include/: App.hh  KeyHandler.hh  Layout.hh  Matrix.hh  State.hh
Birnberg_Orrico_AmAzing/AmAzing/console_ver/stash/src/: State.cc
Birnberg_Orrico_AmAzing/AmAzing/maps/: test_map2
Birnberg_Orrico_AmAzing/AmAzing/original_patched/include/: App.hh  Layout.hh  State.hh
Birnberg_Orrico_AmAzing/AmAzing/original_patched/src/: App.cc  KeyHandler.cc  Layout.cc  State.cc
Birnberg_Orrico_AmAzing/AmAzing/utils/: XtermCodes.cc  XtermCodes.hh  errnoname.c  getShellCmdOutput.cc  getShellCmdOutput.hh  safeCExec.hh  safeSDLExec.hh  safeSdlExec.hh
console_ver/include/: App.hh  KeyHandler.hh  KeyState.hh  Layout.hh  LinuxKbdInputMgr.hh  Matrix.hh  SdlKbdInputMgr.hh  State.hh
console_ver/src/: App.cc  FpsCalc.cc  KeyHandler.cc  Layout.cc  LinuxKbdInputMgr.cc  SdlKbdInputMgr.cc  State.cc
monoplanar_demo/: CMakeLists.txt  Makefile  SDL2.supp  main.cc
monoplanar_demo/cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake  GetSDL2.cmake  GetSDLVersionFromHeader.cmake  GetsafeLibcCall.cmake  GetsafeSdlCall.cmake  Getsdl2_smart_ptrs.cmake  Getxterm_ctrl_seqs.cmake  LocatePackageOrFetchContent.cmake  MakeList.cmake  PrintTargetProperties.cmake  SDLVersionStringFromHeader.cmake  SdlVersionFromHeader.cmake  SetStrictCompileOptions.cmake  TestTarget.cmake
monoplanar_demo/include/: App.hh  DdaRaycastEngine.hh  DisplayMgr.hh_  KbdInputMgr.hh  KeyState.hh  Layout.hh  LinuxKbdInputMgr.hh  SdlAudioMgr.hh_  SdlDisplayMgr.hh  SdlDisplayMgr.hh_  SdlKbdInputMgr.hh  SdlKbdInputMgr.hh_  SdlScreenBuffer.hh_  Settings.hh  State.hh  TtyDisplayMgr.hh  TtyPixelBuffer.hh  TtyScreenBuffer.hh  TtyWindowMgr.hh  Vector2d.hh  sdl_unique_ptrs.hh
monoplanar_demo/maps/: test_map2  test_map3
monoplanar_demo/src/: App.cc  CMakeLists.txt  DdaRaycastEngine.cc  FpsCalc.cc  KbdInputMgr.cc  Layout.cc  LinuxKbdInputMgr.cc  SdlDisplayMgr.cc  SdlKbdInputMgr.cc  SdlWindowMgr.cc  TtyDisplayMgr.cc  TtyPixelBuffer.cc  TtyScreenBuffer.cc  TtyWindowMgr.cc  Vector2d.cc  main.cc  sdl_unique_ptrs.cc
monoplanar_demo/src/errnoname/: CMakeLists.txt
monoplanar_demo/src/errnoname/include/: errnoname.h
monoplanar_demo/src/include/: App.hh  KbdInputMgr.hh  KeyState.hh  Layout.hh  LinuxKbdInputMgr.hh  SdlWindowMgr.hh  TtyPixelBuffer.hh  Vector2d.hh  WindowMgr.hh
utils/: Xterm.cc  XtermCodes.cc  XtermCodes_256_test.cc  XtermCodes_test.cc  func_traits_test.cc  gsco_test.cc  macro_test.cc  safeCExec.hh  safeSDLExec.hh  safeSdlExec.hh  safesdl_test.cc  sdl_struct_ostream_ops.hh  test  xterm_codes.txt
utils/safeLibcCall/: CMakeLists.txt
utils/safeLibcCall/src/: CMakeLists.txt  safeLibcCall.hh
utils/safeLibcCall/src/errnoname/: CMakeLists.txt  errnoname.c
utils/safeSdlCall/: CMakeLists.txt
utils/safeSdlCall/cmake/: FindSDL2.cmake  GetSDL2.cmake
utils/safeSdlCall/src/: CMakeLists.txt  safeSdlCall.hh
utils/sdl2_smart_ptrs/: CMakeLists.txt
utils/sdl2_smart_ptrs/cmake/: FetchIfNotFound.cmake  FindSDL2.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSDL2_rtf.cmake  FindSDL2_ttf.cmake  GetSDL2.cmake  GetSDL2Full.cmake  LocatePackageOrFetchContent.cmake
utils/sdl2_smart_ptrs/src/: CMakeLists.txt  sdl2_mixer_smart_ptr.cc  sdl2_net_smart_ptr.cc  sdl2_rtf_smart_ptr.cc  sdl2_smart_ptr.cc  sdl2_ttf_smart_ptr.cc
utils/sdl2_smart_ptrs/src/include/: sdl2_mixer_smart_ptr.hh  sdl2_net_smart_ptr.hh  sdl2_rtf_smart_ptr.hh  sdl2_smart_ptr.hh  sdl2_ttf_smart_ptr.hh
utils/xterm_ctrl_seqs/: CMakeLists.txt
utils/xterm_ctrl_seqs/cmake/: InSourceBuildGuard.cmake
utils/xterm_ctrl_seqs/src/: CMakeLists.txt  xterm_ctrl_seqs.cc
utils/xterm_ctrl_seqs/src/include/: xterm_ctrl_seqs.hh
utils/xterm_ctrl_seqs/test/: XtermCodes_256_test  XtermCodes_256_test.cc  XtermCodes_test  XtermCodes_test.cc  color-spaces.pl  colortest.sh  xterm256colors.hh
